# tak.hs

./: .editorconfig  .gitignore  LICENSE  README.md  main.hs  tak.cabal
app/: Main.hs
src/: Action.hs  Board.hs  Cell.hs  Command.hs  Conversion.hs  Display.hs  Game.hs  Move.hs  Option.hs  Parser.hs  Place.hs  Stack.hs  TPS.hs  Tak.hs  Validation.hs  XY.hs
test/: ActionSpec.hs  BoardSpec.hs  CellSpec.hs  CommandSpec.hs  ConversionSpec.hs  DisplaySpec.hs  GameSpec.hs  Mock.hs  MoveSpec.hs  ParserSpec.hs  PlaceSpec.hs  Spec.hs  StackSpec.hs  TPSSpec.hs  ValidationSpec.hs  XYSpec.hs
