name:                tak
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Delapouite/tak.hs#readme
license:             BSD3
license-file:        LICENSE
author:              Delapouite
maintainer:          delapouite@gmail.com
copyright:           2016 Delapouite
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tak
                     , Action
                     , Conversion
                     , Display
                     , Parser
                     , Validation
  build-depends:       base >= 4.7 && < 5
                     , split
  default-language:    Haskell2010

executable tak-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tak
                     , split
  default-language:    Haskell2010

test-suite tak-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , tak
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , split
  other-modules:       ConversionSpec
                     , ParserSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Delapouite/tak.hs
